--- a/index.html
+++ b/index.html
@@ -4,9 +4,93 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tischtennis Spielplan</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 20px;
+        }
+        input, button {
+            margin: 5px;
+            padding: 10px;
+            font-size: 16px;
+        }
+        table {
+            margin: 20px auto;
+            border-collapse: collapse;
+            width: 60%;
+        }
+        th, td {
+            border: 1px solid #ccc;
+            padding: 10px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <h1>Tischtennis Spielplan</h1>
-    <p>Hier könnte deine Spielplan-Logik integriert werden!</p>
+    <p>Füge die Spielernamen hinzu und erstelle einen Spielplan!</p>
+
+    <div>
+        <input type="text" id="playerName" placeholder="Spielername">
+        <button onclick="addPlayer()">Hinzufügen</button>
+    </div>
+
+    <h3>Spielerliste:</h3>
+    <ul id="playerList"></ul>
+
+    <button onclick="generateSchedule()">Spielplan erstellen</button>
+
+    <h3>Spielplan:</h3>
+    <table id="scheduleTable">
+        <thead>
+            <tr>
+                <th>Spiel</th>
+                <th>Spieler 1</th>
+                <th>Spieler 2</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+
+    <script>
+        const players = [];
+
+        function addPlayer() {
+            const playerName = document.getElementById('playerName').value.trim();
+            if (playerName && !players.includes(playerName)) {
+                players.push(playerName);
+                document.getElementById('playerList').innerHTML += `<li>${playerName}</li>`;
+                document.getElementById('playerName').value = '';
+            } else if (players.includes(playerName)) {
+                alert('Spieler ist bereits hinzugefügt!');
+            } else {
+                alert('Bitte einen gültigen Namen eingeben.');
+            }
+        }
+
+        function generateSchedule() {
+            const scheduleTable = document.getElementById('scheduleTable').querySelector('tbody');
+            scheduleTable.innerHTML = '';
+
+            if (players.length < 2) {
+                alert('Es müssen mindestens zwei Spieler hinzugefügt werden!');
+                return;
+            }
+
+            let gameCount = 1;
+            for (let i = 0; i < players.length; i++) {
+                for (let j = i + 1; j < players.length; j++) {
+                    const row = `<tr>
+                        <td>Spiel ${gameCount}</td>
+                        <td>${players[i]}</td>
+                        <td>${players[j]}</td>
+                    </tr>`;
+                    scheduleTable.innerHTML += row;
+                    gameCount++;
+                }
+            }
+        }
+    </script>
 </body>
 </html>
