--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tischtennis Spielplan</title>
+    <title>Team-Losung Tischtennis</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,6 +14,13 @@
             margin: 5px;
             padding: 10px;
             font-size: 16px;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        li {
+            margin: 5px 0;
         }
         table {
             margin: 20px auto;
@@ -28,8 +35,8 @@
     </style>
 </head>
 <body>
-    <h1>Tischtennis Spielplan</h1>
-    <p>Füge die Spielernamen hinzu und erstelle einen Spielplan!</p>
+    <h1>Tischtennis-Team-Losung</h1>
+    <p>Füge Spielernamen hinzu und lasse zufällige 2er-Teams losen!</p>
 
     <div>
         <input type="text" id="playerName" placeholder="Spielername">
@@ -39,13 +46,13 @@
     <h3>Spielerliste:</h3>
     <ul id="playerList"></ul>
 
-    <button onclick="generateSchedule()">Spielplan erstellen</button>
+    <button onclick="drawTeams()">Teams losen</button>
 
-    <h3>Spielplan:</h3>
-    <table id="scheduleTable">
+    <h3>Teams:</h3>
+    <table id="teamTable">
         <thead>
             <tr>
-                <th>Spiel</th>
+                <th>Team</th>
                 <th>Spieler 1</th>
                 <th>Spieler 2</th>
             </tr>
@@ -69,26 +76,43 @@
             }
         }
 
-        function generateSchedule() {
-            const scheduleTable = document.getElementById('scheduleTable').querySelector('tbody');
-            scheduleTable.innerHTML = '';
+        function shuffle(array) {
+            // Fisher-Yates Shuffle Algorithm
+            for (let i = array.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [array[i], array[j]] = [array[j], array[i]];
+            }
+        }
+
+        function drawTeams() {
+            const teamTable = document.getElementById('teamTable').querySelector('tbody');
+            teamTable.innerHTML = '';
 
             if (players.length < 2) {
                 alert('Es müssen mindestens zwei Spieler hinzugefügt werden!');
                 return;
             }
 
-            let gameCount = 1;
-            for (let i = 0; i < players.length; i++) {
-                for (let j = i + 1; j < players.length; j++) {
-                    const row = `<tr>
-                        <td>Spiel ${gameCount}</td>
-                        <td>${players[i]}</td>
-                        <td>${players[j]}</td>
-                    </tr>`;
-                    scheduleTable.innerHTML += row;
-                    gameCount++;
-                }
+            // Shuffle players array
+            const shuffledPlayers = [...players];
+            shuffle(shuffledPlayers);
+
+            let teamCount = 1;
+            while (shuffledPlayers.length >= 2) {
+                const player1 = shuffledPlayers.pop();
+                const player2 = shuffledPlayers.pop();
+                const row = `<tr>
+                    <td>Team ${teamCount}</td>
+                    <td>${player1}</td>
+                    <td>${player2}</td>
+                </tr>`;
+                teamTable.innerHTML += row;
+                teamCount++;
+            }
+
+            // Falls ein Spieler übrig bleibt
+            if (shuffledPlayers.length === 1) {
+                alert(`Der Spieler ${shuffledPlayers[0]} hat leider kein Team gefunden.`);
             }
         }
     </script>
