--- a/index.html
+++ b/index.html
@@ -158,56 +158,58 @@
                 return;
             }
 
-            // Alle möglichen Spiele erzeugen (Round Robin)
-            const allGames = [];
-            for (let i = 0; i < teams.length; i++) {
-                for (let j = i + 1; j < teams.length; j++) {
-                    allGames.push({ team1: teams[i].teamName, team2: teams[j].teamName });
+            // Round-Robin-Schema erzeugen
+            const numTeams = teams.length;
+            const rounds = [];
+            const fixedTeam = teams[0]; // Das erste Team bleibt fest
+            const rotatingTeams = teams.slice(1); // Die anderen Teams rotieren
+
+            for (let round = 0; round < numTeams - 1; round++) {
+                const matchups = [];
+
+                // Füge das feste Team zu einem Match hinzu
+                matchups.push({
+                    team1: fixedTeam.teamName,
+                    team2: rotatingTeams[round % rotatingTeams.length].teamName,
+                });
+
+                // Erzeuge weitere Matchups
+                for (let i = 0; i < rotatingTeams.length / 2; i++) {
+                    const team1 = rotatingTeams[i];
+                    const team2 = rotatingTeams[rotatingTeams.length - 1 - i];
+                    matchups.push({
+                        team1: team1.teamName,
+                        team2: team2.teamName,
+                    });
                 }
+
+                // Rotieren der Teams (außer das feste Team)
+                rotatingTeams.unshift(rotatingTeams.pop());
+
+                // Speichere die Matchups dieser Runde
+                rounds.push(matchups);
             }
 
-            // Spiele so sortieren, dass kein Team zweimal hintereinander spielt
-            const finalSchedule = [];
-            while (allGames.length > 0) {
-                let foundGame = false;
-
-                for (let i = 0; i < allGames.length; i++) {
-                    const game = allGames[i];
-                    const lastGame = finalSchedule[finalSchedule.length - 1];
-
-                    if (!lastGame || (lastGame.team1 !== game.team1 && lastGame.team1 !== game.team2 && lastGame.team2 !== game.team1 && lastGame.team2 !== game.team2)) {
-                        finalSchedule.push(game);
-                        allGames.splice(i, 1);
-                        foundGame = true;
-                        break;
-                    }
-                }
-
-                // Falls kein geeignetes Spiel gefunden wird, breche ab (kann bei sehr kleinen Gruppen passieren)
-                if (!foundGame) {
-                    alert('Es konnte kein ausgewogener Spielplan erstellt werden.');
-                    return;
-                }
-            }
-
-            // Spielplan anzeigen und speichern
+            // Spiele anzeigen und speichern
             let matchCount = 1;
-            finalSchedule.forEach(game => {
-                game.match = matchCount++;
-                game.result = ''; // Platzhalter für Ergebnisse
+            rounds.forEach((round) => {
+                round.forEach((game) => {
+                    game.match = matchCount++;
+                    game.result = ''; // Platzhalter für Ergebnisse
 
-                const row = `<tr>
-                    <td>Spiel ${game.match}</td>
-                    <td>${game.team1}</td>
-                    <td>${game.team2}</td>
-                    <td>
-                        <input type="text" class="result-input" 
-                               placeholder="Ergebnis" 
-                               onchange="updateResult(${game.match - 1}, this.value)">
-                    </td>
-                </tr>`;
-                scheduleTable.innerHTML += row;
-                schedule.push(game);
+                    const row = `<tr>
+                        <td>Spiel ${game.match}</td>
+                        <td>${game.team1}</td>
+                        <td>${game.team2}</td>
+                        <td>
+                            <input type="text" class="result-input" 
+                                   placeholder="Ergebnis" 
+                                   onchange="updateResult(${game.match - 1}, this.value)">
+                        </td>
+                    </tr>`;
+                    scheduleTable.innerHTML += row;
+                    schedule.push(game);
+                });
             });
 
             // Spielplan in LocalStorage speichern
