--- a/index.html
+++ b/index.html
@@ -148,73 +148,8 @@
             teams[teamIndex].teamName = newName;
         }
 
-        function generateSchedule() {
-            const scheduleTable = document.getElementById('scheduleTable').querySelector('tbody');
-            scheduleTable.innerHTML = '';
-            schedule = [];
-
-            if (teams.length < 2) {
-                alert('Es müssen mindestens zwei Teams vorhanden sein, um einen Spielplan zu erstellen!');
-                return;
-            }
-
-            // Round-Robin-Schema erzeugen
-            const numTeams = teams.length;
-            const rounds = [];
-            const fixedTeam = teams[0]; // Das erste Team bleibt fest
-            const rotatingTeams = teams.slice(1); // Die anderen Teams rotieren
-
-            for (let round = 0; round < numTeams - 1; round++) {
-                const matchups = [];
-
-                // Füge das feste Team zu einem Match hinzu
-                matchups.push({
-                    team1: fixedTeam.teamName,
-                    team2: rotatingTeams[round % rotatingTeams.length].teamName,
-                });
-
-                // Erzeuge weitere Matchups
-                for (let i = 0; i < rotatingTeams.length / 2; i++) {
-                    const team1 = rotatingTeams[i];
-                    const team2 = rotatingTeams[rotatingTeams.length - 1 - i];
-                    matchups.push({
-                        team1: team1.teamName,
-                        team2: team2.teamName,
-                    });
-                }
-
-                // Rotieren der Teams (außer das feste Team)
-                rotatingTeams.unshift(rotatingTeams.pop());
-
-                // Speichere die Matchups dieser Runde
-                rounds.push(matchups);
-            }
-
-            // Spiele anzeigen und speichern
-            let matchCount = 1;
-            rounds.forEach((round) => {
-                round.forEach((game) => {
-                    game.match = matchCount++;
-                    game.result = ''; // Platzhalter für Ergebnisse
-
-                    const row = `<tr>
-                        <td>Spiel ${game.match}</td>
-                        <td>${game.team1}</td>
-                        <td>${game.team2}</td>
-                        <td>
-                            <input type="text" class="result-input" 
-                                   placeholder="Ergebnis" 
-                                   onchange="updateResult(${game.match - 1}, this.value)">
-                        </td>
-                    </tr>`;
-                    scheduleTable.innerHTML += row;
-                    schedule.push(game);
-                });
-            });
-
-            // Spielplan in LocalStorage speichern
-            localStorage.setItem('tischtennisSpielplan', JSON.stringify(schedule));
-        }
+        // Die aktualisierte generateSchedule-Funktion ist hier eingebettet
+        ${generateSchedule.toString()}
 
         function updateResult(matchIndex, result) {
             schedule[matchIndex].result = result;
