index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -1,61 +1,224 @@
-function generateSchedule() {
-    const scheduleTable = document.getElementById('scheduleTable').querySelector('tbody');
-    scheduleTable.innerHTML = '';
-    schedule = [];
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Team-Losung Tischtennis</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 20px;
+        }
+        input, button {
+            margin: 5px;
+            padding: 10px;
+            font-size: 16px;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        li {
+            margin: 5px 0;
+        }
+        table {
+            margin: 20px auto;
+            border-collapse: collapse;
+            width: 80%;
+        }
+        th, td {
+            border: 1px solid #ccc;
+            padding: 10px;
+            text-align: center;
+        }
+        .rename-input, .result-input {
+            width: 90%;
+            font-size: 14px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Tischtennis-Team-Losung</h1>
+    <p>Füge Spielernamen hinzu, lasse Teams losen und erstelle einen Spielplan!</p>
 
-    if (teams.length < 2) {
-        alert('Es müssen mindestens zwei Teams vorhanden sein, um einen Spielplan zu erstellen!');
-        return;
-    }
+    <div>
+        <input type="text" id="playerName" placeholder="Spielername">
+        <button onclick="addPlayer()">Hinzufügen</button>
+    </div>
 
-    const numTeams = teams.length;
-    const hasBye = numTeams % 2 !== 0; // Prüfen, ob wir ein Dummy-Team brauchen
-    const allTeams = [...teams];
+    <h3>Spielerliste:</h3>
+    <ul id="playerList"></ul>
 
-    if (hasBye) {
-        allTeams.push({ teamName: "Spielfrei" }); // Dummy-Team hinzufügen
-    }
+    <button onclick="drawTeams()">Teams losen</button>
 
-    const numRounds = allTeams.length - 1;
-    const half = allTeams.length / 2;
+    <h3>Teams:</h3>
+    <table id="teamTable">
+        <thead>
+            <tr>
+                <th>Team</th>
+                <th>Spieler 1</th>
+                <th>Spieler 2</th>
+                <th>Teamname</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 
-    for (let round = 0; round < numRounds; round++) {
-        const matchups = [];
+    <button onclick="generateSchedule()">Spielplan erstellen</button>
+    <button onclick="openViewer()">Spielplan anzeigen</button>
 
-        for (let i = 0; i < half; i++) {
-            const team1 = allTeams[i];
-            const team2 = allTeams[allTeams.length - 1 - i];
+    <h3>Spielplan:</h3>
+    <table id="scheduleTable">
+        <thead>
+            <tr>
+                <th>Spiel</th>
+                <th>Team 1</th>
+                <th>Team 2</th>
+                <th>Ergebnis</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 
-            if (team1.teamName !== "Spielfrei" && team2.teamName !== "Spielfrei") {
-                matchups.push({ team1: team1.teamName, team2: team2.teamName });
+    <script>
+        const players = [];
+        let teams = [];
+        let schedule = [];
+
+        function addPlayer() {
+            const playerName = document.getElementById('playerName').value.trim();
+            if (playerName && !players.includes(playerName)) {
+                players.push(playerName);
+                document.getElementById('playerList').innerHTML += `<li>${playerName}</li>`;
+                document.getElementById('playerName').value = '';
+            } else if (players.includes(playerName)) {
+                alert('Spieler ist bereits hinzugefügt!');
+            } else {
+                alert('Bitte einen gültigen Namen eingeben.');
             }
         }
 
-        // Teams rotieren (außer das erste Team)
-        const last = allTeams.pop();
-        allTeams.splice(1, 0, last);
+        function shuffle(array) {
+            for (let i = array.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [array[i], array[j]] = [array[j], array[i]];
+            }
+        }
 
-        // Spiele in den Spielplan einfügen
-        let matchCount = schedule.length + 1;
-        matchups.forEach(game => {
-            game.match = matchCount++;
-            game.result = ''; // Platzhalter für Ergebnisse
+        function drawTeams() {
+            const teamTable = document.getElementById('teamTable').querySelector('tbody');
+            teamTable.innerHTML = '';
+            teams = [];
 
-            const row = `<tr>
-                <td>Spiel ${game.match}</td>
-                <td>${game.team1}</td>
-                <td>${game.team2}</td>
-                <td>
-                    <input type="text" class="result-input" 
-                           placeholder="Ergebnis" 
-                           onchange="updateResult(${game.match - 1}, this.value)">
-                </td>
-            </tr>`;
-            scheduleTable.innerHTML += row;
-            schedule.push(game);
-        });
-    }
+            if (players.length < 2) {
+                alert('Es müssen mindestens zwei Spieler hinzugefügt werden!');
+                return;
+            }
 
-    // Spielplan in LocalStorage speichern
-    localStorage.setItem('tischtennisSpielplan', JSON.stringify(schedule));
-}
+            const shuffledPlayers = [...players];
+            shuffle(shuffledPlayers);
+
+            let teamCount = 1;
+            while (shuffledPlayers.length >= 2) {
+                const player1 = shuffledPlayers.pop();
+                const player2 = shuffledPlayers.pop();
+                const teamName = `Team ${teamCount}`;
+                teams.push({ player1, player2, teamName });
+                const row = `<tr>
+                    <td>${teamName}</td>
+                    <td>${player1}</td>
+                    <td>${player2}</td>
+                    <td>
+                        <input type="text" class="rename-input" 
+                               value="${teamName}" 
+                               onchange="updateTeamName(${teamCount - 1}, this.value)">
+                    </td>
+                </tr>`;
+                teamTable.innerHTML += row;
+                teamCount++;
+            }
+
+            if (shuffledPlayers.length === 1) {
+                alert(`Der Spieler ${shuffledPlayers[0]} hat leider kein Team gefunden.`);
+            }
+        }
+
+        function updateTeamName(teamIndex, newName) {
+            teams[teamIndex].teamName = newName;
+        }
+
+        // Deine funktionierende `generateSchedule`-Funktion
+        function generateSchedule() {
+            const scheduleTable = document.getElementById('scheduleTable').querySelector('tbody');
+            scheduleTable.innerHTML = '';
+            schedule = [];
+
+            if (teams.length < 2) {
+                alert('Es müssen mindestens zwei Teams vorhanden sein, um einen Spielplan zu erstellen!');
+                return;
+            }
+
+            const numTeams = teams.length;
+            const hasBye = numTeams % 2 !== 0; // Prüfen, ob wir ein Dummy-Team brauchen
+            const allTeams = [...teams];
+
+            if (hasBye) {
+                allTeams.push({ teamName: "Spielfrei" }); // Dummy-Team hinzufügen
+            }
+
+            const numRounds = allTeams.length - 1;
+            const half = allTeams.length / 2;
+
+            for (let round = 0; round < numRounds; round++) {
+                const matchups = [];
+
+                for (let i = 0; i < half; i++) {
+                    const team1 = allTeams[i];
+                    const team2 = allTeams[allTeams.length - 1 - i];
+
+                    if (team1.teamName !== "Spielfrei" && team2.teamName !== "Spielfrei") {
+                        matchups.push({ team1: team1.teamName, team2: team2.teamName });
+                    }
+                }
+
+                // Teams rotieren (außer das erste Team)
+                const last = allTeams.pop();
+                allTeams.splice(1, 0, last);
+
+                // Spiele in den Spielplan einfügen
+                let matchCount = schedule.length + 1;
+                matchups.forEach(game => {
+                    game.match = matchCount++;
+                    game.result = ''; // Platzhalter für Ergebnisse
+
+                    const row = `<tr>
+                        <td>Spiel ${game.match}</td>
+                        <td>${game.team1}</td>
+                        <td>${game.team2}</td>
+                        <td>
+                            <input type="text" class="result-input" 
+                                   placeholder="Ergebnis" 
+                                   onchange="updateResult(${game.match - 1}, this.value)">
+                        </td>
+                    </tr>`;
+                    scheduleTable.innerHTML += row;
+                    schedule.push(game);
+                });
+            }
+
+            // Spielplan in LocalStorage speichern
+            localStorage.setItem('tischtennisSpielplan', JSON.stringify(schedule));
+        }
+
+        function updateResult(matchIndex, result) {
+            schedule[matchIndex].result = result;
+            localStorage.setItem('tischtennisSpielplan', JSON.stringify(schedule));
+        }
+
+        function openViewer() {
+            window.open('viewer.html', '_blank');
+        }
+    </script>
+</body>
+</html>
